--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.164.54.199;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.186.0.144;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
@@ -151,6 +152,7 @@ set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 148.113.196.231;
+set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
@@ -1666,7 +1668,9 @@ set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.221.152.105;
 set_real_ip_from 77.221.157.237;
 set_real_ip_from 77.221.159.184;
+set_real_ip_from 77.221.159.189;
 set_real_ip_from 77.221.159.192;
+set_real_ip_from 77.221.159.193;
 set_real_ip_from 77.221.159.75;
 set_real_ip_from 77.37.3.7;
 set_real_ip_from 77.48.28.193;
