--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -208,6 +208,7 @@ deny 173.0.3.111;
 deny 173.249.57.253;
 deny 176.114.248.225;
 deny 176.118.193.33;
+deny 176.121.81.51;
 deny 176.126.253.190;
 deny 176.58.100.98;
 deny 176.58.121.177;
@@ -342,23 +343,32 @@ deny 185.220.101.10;
 deny 185.220.101.11;
 deny 185.220.101.12;
 deny 185.220.101.128;
+deny 185.220.101.129;
 deny 185.220.101.13;
 deny 185.220.101.130;
+deny 185.220.101.131;
+deny 185.220.101.132;
+deny 185.220.101.133;
 deny 185.220.101.134;
+deny 185.220.101.135;
 deny 185.220.101.136;
 deny 185.220.101.137;
 deny 185.220.101.138;
 deny 185.220.101.139;
 deny 185.220.101.14;
+deny 185.220.101.140;
 deny 185.220.101.141;
+deny 185.220.101.142;
 deny 185.220.101.143;
 deny 185.220.101.144;
 deny 185.220.101.145;
 deny 185.220.101.146;
 deny 185.220.101.147;
+deny 185.220.101.148;
 deny 185.220.101.149;
 deny 185.220.101.15;
 deny 185.220.101.150;
+deny 185.220.101.151;
 deny 185.220.101.153;
 deny 185.220.101.154;
 deny 185.220.101.155;
@@ -371,12 +381,16 @@ deny 185.220.101.161;
 deny 185.220.101.162;
 deny 185.220.101.163;
 deny 185.220.101.164;
+deny 185.220.101.165;
 deny 185.220.101.166;
 deny 185.220.101.167;
 deny 185.220.101.168;
+deny 185.220.101.169;
 deny 185.220.101.17;
 deny 185.220.101.170;
 deny 185.220.101.171;
+deny 185.220.101.172;
+deny 185.220.101.173;
 deny 185.220.101.174;
 deny 185.220.101.175;
 deny 185.220.101.176;
@@ -388,6 +402,7 @@ deny 185.220.101.180;
 deny 185.220.101.181;
 deny 185.220.101.182;
 deny 185.220.101.183;
+deny 185.220.101.184;
 deny 185.220.101.185;
 deny 185.220.101.186;
 deny 185.220.101.187;
@@ -1287,19 +1302,27 @@ deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
+deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
+deny 2a0b:f4c2:1::132;
+deny 2a0b:f4c2:1::133;
 deny 2a0b:f4c2:1::134;
+deny 2a0b:f4c2:1::135;
 deny 2a0b:f4c2:1::137;
 deny 2a0b:f4c2:1::138;
 deny 2a0b:f4c2:1::139;
+deny 2a0b:f4c2:1::140;
 deny 2a0b:f4c2:1::141;
+deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
 deny 2a0b:f4c2:1::144;
 deny 2a0b:f4c2:1::145;
 deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
+deny 2a0b:f4c2:1::148;
 deny 2a0b:f4c2:1::149;
 deny 2a0b:f4c2:1::150;
+deny 2a0b:f4c2:1::151;
 deny 2a0b:f4c2:1::153;
 deny 2a0b:f4c2:1::154;
 deny 2a0b:f4c2:1::155;
@@ -1311,11 +1334,15 @@ deny 2a0b:f4c2:1::161;
 deny 2a0b:f4c2:1::162;
 deny 2a0b:f4c2:1::163;
 deny 2a0b:f4c2:1::164;
+deny 2a0b:f4c2:1::165;
 deny 2a0b:f4c2:1::166;
 deny 2a0b:f4c2:1::167;
 deny 2a0b:f4c2:1::168;
+deny 2a0b:f4c2:1::169;
 deny 2a0b:f4c2:1::170;
 deny 2a0b:f4c2:1::171;
+deny 2a0b:f4c2:1::172;
+deny 2a0b:f4c2:1::173;
 deny 2a0b:f4c2:1::174;
 deny 2a0b:f4c2:1::175;
 deny 2a0b:f4c2:1::176;
@@ -1326,6 +1353,7 @@ deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::181;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
+deny 2a0b:f4c2:1::184;
 deny 2a0b:f4c2:1::185;
 deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
@@ -1506,7 +1534,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.128.157.46;
 deny 45.129.84.246;
-deny 45.129.84.248;
+deny 45.129.84.249;
 deny 45.131.65.34;
 deny 45.132.246.245;
 deny 45.134.225.36;
