--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -457,19 +457,27 @@ deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
+deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
+deny 2a0b:f4c2:1::132;
+deny 2a0b:f4c2:1::133;
 deny 2a0b:f4c2:1::134;
+deny 2a0b:f4c2:1::135;
 deny 2a0b:f4c2:1::137;
 deny 2a0b:f4c2:1::138;
 deny 2a0b:f4c2:1::139;
+deny 2a0b:f4c2:1::140;
 deny 2a0b:f4c2:1::141;
+deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
 deny 2a0b:f4c2:1::144;
 deny 2a0b:f4c2:1::145;
 deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
+deny 2a0b:f4c2:1::148;
 deny 2a0b:f4c2:1::149;
 deny 2a0b:f4c2:1::150;
+deny 2a0b:f4c2:1::151;
 deny 2a0b:f4c2:1::153;
 deny 2a0b:f4c2:1::154;
 deny 2a0b:f4c2:1::155;
@@ -481,11 +489,15 @@ deny 2a0b:f4c2:1::161;
 deny 2a0b:f4c2:1::162;
 deny 2a0b:f4c2:1::163;
 deny 2a0b:f4c2:1::164;
+deny 2a0b:f4c2:1::165;
 deny 2a0b:f4c2:1::166;
 deny 2a0b:f4c2:1::167;
 deny 2a0b:f4c2:1::168;
+deny 2a0b:f4c2:1::169;
 deny 2a0b:f4c2:1::170;
 deny 2a0b:f4c2:1::171;
+deny 2a0b:f4c2:1::172;
+deny 2a0b:f4c2:1::173;
 deny 2a0b:f4c2:1::174;
 deny 2a0b:f4c2:1::175;
 deny 2a0b:f4c2:1::176;
@@ -496,6 +508,7 @@ deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::181;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
+deny 2a0b:f4c2:1::184;
 deny 2a0b:f4c2:1::185;
 deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
