--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,6 +117,7 @@ allow 114.35.245.150;
 allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
+allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.0.236.83;
@@ -1231,6 +1232,7 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1522,7 +1524,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.128.157.46;
 allow 45.129.84.246;
-allow 45.129.84.249;
+allow 45.129.84.247;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1625,7 +1627,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1698,6 +1699,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
+allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
@@ -1719,6 +1721,7 @@ allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
