--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -392,6 +392,7 @@ deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
