--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -123,6 +123,7 @@ allow 130.0.236.83;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
+allow 13.126.132.195;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -944,6 +945,7 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2406:da1a:888:d200:3daf:64c9:d771:fbab;
+allow 2406:da1a:a96:2f00:9461:57d2:2f87:cb16;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
@@ -1513,7 +1515,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.128.157.46;
 allow 45.129.84.246;
-allow 45.129.84.249;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1593,6 +1594,7 @@ allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.250.38.29;
 allow 47.76.187.86;
+allow 49.51.172.44;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.195.166.174;
@@ -1649,6 +1651,7 @@ allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
+allow 54.36.101.21;
 allow 54.36.209.253;
 allow 54.36.209.254;
 allow 5.45.102.93;
